# hamilia

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.vercel  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: ARCHITECTURE.md  PIPELINE.md  TECH_STACK.md
frontend/: Dockerfile  Dockerfile.vercel  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/debate/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/sources/: page.tsx
frontend/src/components/: ClientProviders.tsx
frontend/src/components/analysis/: AnalysisInterface.tsx  ArgumentCard.tsx  CruxCard.tsx  DebateView.tsx
frontend/src/components/debate/: AvatarPicker.tsx  AvatarScene.tsx  CountdownOverlay.tsx  DebateArena.tsx  DebateChat.tsx  DebateMessage.tsx  FallbackAvatar.tsx  InlineVerdict.tsx  PhaseIndicator.tsx  PhaseTransitionCard.tsx  VRMAvatar.tsx  VerdictOverlay.tsx
frontend/src/components/landing/: Hero.tsx
frontend/src/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/settings/: ApiKeyModal.tsx
frontend/src/components/shared/: BrutalistCard.tsx  FloatingElements.tsx  GlassCard.tsx  SourceBadge.tsx  StanceTag.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/hooks/: useDebateStream.ts
frontend/src/lib/: api.ts  apiKeys.ts  store.ts
scripts/: dev.sh  docker.sh  prod.sh  stop.sh
src/: main.py
src/api/: main.py  routes.py  schemas.py
src/core/: config.py
src/ingestion/: __init__.py  arxiv_adapter.py  base.py  chunker.py  file_adapter.py  indexer.py  rss_adapter.py  semantic_scholar_adapter.py  web_search_adapter.py
src/llm/: __init__.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/models/: __init__.py  debate.py  schemas.py
src/pipeline/: orchestrator.py
src/rag/: debater.py  decomposer.py  retriever.py  stance_tagger.py  synthesizer.py  verifier.py
