[project]
name = "agon"
version = "0.1.0"
description = "Adversarial Evidence Engine - A dialectical RAG system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",

    # Vector Store
    "chromadb>=0.4.18",

    # ML/NLI (local, free)
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.0",
    "torch>=2.1.0",

    # LLM Providers (plug in/out via config)
    "openai>=1.6.0",         # OpenAI + OpenRouter (OpenAI-compatible)
    "ollama>=0.6.0",         # Local Ollama (free)
    "google-generativeai>=0.8.0",  # Gemini (free tier)

    # Data Ingestion (all free, no API keys)
    "duckduckgo-search>=8.0",  # Web search
    "feedparser>=6.0",         # RSS feeds
    "arxiv>=2.1",              # arXiv API
    "newspaper3k>=0.2.8",      # Article extraction from URLs
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
